--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h2{
 .box{
     display:inline-block;
     font-size: 1.5rem;
-    margin-inline: 2rem;
+    margin-inline: 4rem;
     align-items: center;
     flex-direction: column;
 }
@@ -57,7 +57,7 @@ h2{
 }
 .iten{
     display:inline-block;
-    margin-inline:1.7rem;
+    margin-inline:2.5rem;
 }
 .container-box{
     display: flex;
@@ -67,6 +67,51 @@ h2{
     align-items: center;
     text-decoration: none;
 }
-.page-footer{
+footer{
+    position:fixed;
     bottom: 0;
+    margin-right: 0;
+    width: 100%;
+}
+.fundo-computação{
+    height: 30rem;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+    width: 100rem;
+}
+.Sub-titulos{
+    font-weight: bold;
+    font-size: 1rem;
+}
+.text{
+    margin-left: 2.5rem;
+    margin-bottom: 2rem;
+}
+.fundo-medicina{
+    height: 30rem;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+    width: 100rem;
+    justify-content: center;
+}
+.fundo-engenharia{
+    height: 30rem;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+    width: 100rem;
+    justify-content: center;
+}
+.em-obra{
+    align-items: center;
+    width: 100%;
+    display:flex;
+    justify-content: center;
+    margin-top: 1rem;
+    height: 30rem;
+}
+.em-obra img{
+    height:25rem;
 }
